--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
   - name: Publications
     url: '#publications'
     weight: 20
-#  - name: Projects
-#    url: '#projects'
-#    weight: 30
-#  - name: Talks
-#    url: '#talks'
-#    weight: 40
-#  - name: Publications
-#    url: '#featured'
-#    weight: 50
+  - name: Conference Proceedings
+    url: '#proceedings'
+    weight: 30
+  - name: Honors and Awards
+    url: '#awards'
+    weight: 40
+  - name: Academic Duties
+    url: '#duties'
+    weight: 50
 #  - name: Contact
 #    url: '#contact'
 #    weight: 60
