--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   - name: Honors and Awards
     url: '#awards'
     weight: 40
-  - name: Academic Duties
-    url: '#duties'
-    weight: 50
+#  - name: Academic Duties
+#    url: '#duties'
+#    weight: 50
 #  - name: Contact
 #    url: '#contact'
 #    weight: 60
