--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
   - name: Publications
     url: '#publications'
     weight: 20
+  - name: Contact
+    url: '#contact'
+    weight: 60
 #   - name: Conference Proceedings
 #     url: '#proceedings'
 #     weight: 30
@@ -19,9 +22,7 @@ main:
 #  - name: Academic Duties
 #    url: '#duties'
 #    weight: 50
-#  - name: Contact
-#    url: '#contact'
-#    weight: 60
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
