--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: indigo
-  theme_night: indigo
-  font: roboto
+  theme_day: blue
+  theme_night: blue
+  font: minimal
   font_size: S
 
 # SEO
