--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: blue
-  theme_night: blue
+  theme_day: earth
+  theme_night: earth
   font: minimal
   font_size: L
 
